--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: enhancerHomologSearch
 Type: Package
 Title: Identification of putative mammalian orthologs to given enhancer
-Version: 0.1.0
+Version: 0.1.1
 Author@R: c(person(given="Jianhong", family="Ou", email="jianhong.ou@duke.edu", 
                  role=c("aut", "cre"), comment=c(ORCID="0000-0002-8652-2488")),
-            person(given="Jianhong", family="Ou", role=c("aut")),
-            person(given="Jianhong", family="Ou", role=c("aut")))
+            person(given="Valentina", family="Cigliola", role=c("aut")),
+            person(given="Kenneth", family="Poss", role=c("aut")))
 Author: Jianhong Ou, Valentina Cigliola, Kenneth Poss
 Maintainer: Jianhong Ou <jianhong.ou@duke.edu>
 Description: Get ENCODE data of enhancer region via H3K4me1 peaks and
