--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(alignmentOne)
 export(enhancers)
 export(genome)
 export(getENCODEdata)
+export(queryEncode)
 export(saveAlignments)
 exportClasses(enhancers)
 exportMethods(`$<-`)
@@ -29,12 +30,17 @@ importFrom(Biostrings,pattern)
 importFrom(Biostrings,reverseComplement)
 importFrom(Biostrings,unaligned)
 importFrom(Biostrings,write.phylip)
-importFrom(ENCODExplorer,downloadEncode)
-importFrom(ENCODExplorer,queryEncode)
 importFrom(GenomeInfoDb,genome)
 importFrom(GenomeInfoDb,mapGenomeBuilds)
 importFrom(IRanges,subject)
 importFrom(IRanges,subsetByOverlaps)
+importFrom(httr,GET)
+importFrom(httr,add_headers)
+importFrom(httr,content)
+importFrom(httr,http_error)
+importFrom(httr,http_status)
+importFrom(httr,http_type)
+importFrom(jsonlite,fromJSON)
 importFrom(msa,msa)
 importFrom(msa,msaClustalOmega)
 importFrom(msa,msaClustalW)
