--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: enhancerHomologSearch
 Type: Package
 Title: Identification of putative mammalian orthologs to given enhancer
-Version: 0.1.1
+Version: 0.1.2
 Author@R: c(person(given="Jianhong", family="Ou", email="jianhong.ou@duke.edu", 
                  role=c("aut", "cre"), comment=c(ORCID="0000-0002-8652-2488")),
             person(given="Valentina", family="Cigliola", role=c("aut")),
@@ -16,9 +16,10 @@ Description: Get ENCODE data of enhancer region via H3K4me1 peaks and
              with given enhancer.
 Depends: R (>= 3.5.0), methods
 Imports: BiocGenerics, Biostrings, BSgenome, BiocParallel,
-         ENCODExplorer,
          GenomeInfoDb, GenomicRanges,
+         httr,
          IRanges,
+         jsonlite,
          msa,
          rtracklayer,
          S4Vectors
