--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: enhancerHomologSearch
 Type: Package
 Title: Identification of putative mammalian orthologs to given enhancer
-Version: 0.99.1
+Version: 0.99.2
 Authors@R: c(person(given="Jianhong", family="Ou", email="jianhong.ou@duke.edu", 
                  role=c("aut", "cre"), comment=c(ORCID="0000-0002-8652-2488")),
             person(given="Valentina", family="Cigliola", role=c("dtc")),
@@ -12,8 +12,10 @@ Description: Get ENCODE data of enhancer region via H3K4me1 peaks and
              target TSS. The top candidates from human and mouse will be
              aligned to each other and then exported as multiple alignments
              with given enhancer.
+BugReports: https://github.com/jianhong/enhancerHomologSearch/issues
+URL: https://jianhong.github.io/enhancerHomologSearch
 Depends: R (>= 4.1.0), methods
-Imports: BiocGenerics, Biostrings, BSgenome, BiocParallel,
+Imports: BiocGenerics, Biostrings, BSgenome, BiocParallel, BiocFileCache,
          GenomeInfoDb, GenomicRanges,
          httr,
          IRanges,
@@ -29,7 +31,8 @@ Suggests: knitr, rmarkdown,
   TxDb.Hsapiens.UCSC.hg38.knownGene,
   org.Hs.eg.db,
   TxDb.Mmusculus.UCSC.mm10.knownGene,
-  org.Mm.eg.db
+  org.Mm.eg.db,
+  testthat
 biocViews: Sequencing, GeneRegulation, Alignment
 License: GPL (>= 2)
 Encoding: UTF-8
