--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,8 +33,11 @@ importFrom(BiocGenerics,organism)
 importFrom(BiocGenerics,score)
 importFrom(BiocParallel,bplapply)
 importFrom(Biostrings,DNAStringSet)
+importFrom(Biostrings,alphabetFrequency)
 importFrom(Biostrings,consensusMatrix)
 importFrom(Biostrings,getSeq)
+importFrom(Biostrings,injectHardMask)
+importFrom(Biostrings,matchPattern)
 importFrom(Biostrings,pairwiseAlignment)
 importFrom(Biostrings,pattern)
 importFrom(Biostrings,reverseComplement)
@@ -45,6 +48,8 @@ importFrom(GenomeInfoDb,genome)
 importFrom(GenomeInfoDb,mapGenomeBuilds)
 importFrom(GenomeInfoDb,seqinfo)
 importFrom(IRanges,IRanges)
+importFrom(IRanges,IRangesList)
+importFrom(IRanges,Views)
 importFrom(IRanges,subject)
 importFrom(IRanges,subsetByOverlaps)
 importFrom(S4Vectors,extractROWS)
