Add searchTFBPS function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,11 @@
 export(Enhancers)
 export(alignment)
 export(alignmentOne)
+export(conservedMotifs)
 export(getENCODEdata)
 export(queryEncode)
 export(saveAlignments)
+export(searchTFBPS)
 exportClasses(Enhancers)
 exportMethods(`$<-`)
 exportMethods(`$`)
@@ -15,7 +17,9 @@ exportMethods(`genome<-`)
 exportMethods(`genome`)
 exportMethods(`peaks<-`)
 exportMethods(`peaks`)
+exportMethods(`query_tfbp`)
 exportMethods(`seqinfo`)
+exportMethods(`tfbp`)
 exportMethods(coerce)
 exportMethods(getSeq)
 exportMethods(show)
@@ -37,11 +41,13 @@ importFrom(Biostrings,alphabetFrequency)
 importFrom(Biostrings,consensusMatrix)
 importFrom(Biostrings,getSeq)
 importFrom(Biostrings,injectHardMask)
+importFrom(Biostrings,mask)
 importFrom(Biostrings,matchPattern)
 importFrom(Biostrings,pairwiseAlignment)
 importFrom(Biostrings,pattern)
 importFrom(Biostrings,reverseComplement)
 importFrom(Biostrings,unaligned)
+importFrom(Biostrings,unmasked)
 importFrom(Biostrings,write.phylip)
 importFrom(GenomeInfoDb,"genome<-")
 importFrom(GenomeInfoDb,genome)
@@ -50,8 +56,10 @@ importFrom(GenomeInfoDb,seqinfo)
 importFrom(IRanges,IRanges)
 importFrom(IRanges,IRangesList)
 importFrom(IRanges,Views)
+importFrom(IRanges,gaps)
 importFrom(IRanges,subject)
 importFrom(IRanges,subsetByOverlaps)
+importFrom(Matrix,Matrix)
 importFrom(S4Vectors,extractROWS)
 importFrom(httr,GET)
 importFrom(httr,add_headers)
@@ -60,6 +68,8 @@ importFrom(httr,http_error)
 importFrom(httr,http_status)
 importFrom(httr,http_type)
 importFrom(jsonlite,fromJSON)
+importFrom(motifmatchr,matchMotifs)
+importFrom(motifmatchr,motifMatches)
 importFrom(rtracklayer,import)
 importFrom(stats,p.adjust)
 importFrom(utils,combn)
@@ -71,4 +81,6 @@ importMethodsFrom(GenomeInfoDb,"genome<-")
 importMethodsFrom(GenomeInfoDb,genome)
 importMethodsFrom(GenomeInfoDb,seqinfo)
 importMethodsFrom(IRanges,subsetByOverlaps)
+importMethodsFrom(Matrix,rowSums)
+importMethodsFrom(Matrix,t)
 useDynLib(enhancerHomologSearch)
