Add support for multiple alignments for alignment function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ importFrom(stats,p.adjust)
 importFrom(utils,combn)
 importFrom(utils,head)
 importFrom(utils,tail)
+importFrom(utils,write.csv)
 importMethodsFrom(Biostrings,getSeq)
 importMethodsFrom(Biostrings,reverseComplement)
 importMethodsFrom(GenomeInfoDb,"genome<-")
