add html output for conservedMotifs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ importFrom(BiocFileCache,getBFCOption)
 importFrom(BiocGenerics,organism)
 importFrom(BiocGenerics,score)
 importFrom(BiocParallel,bplapply)
+importFrom(Biostrings,DNAMultipleAlignment)
 importFrom(Biostrings,DNAStringSet)
 importFrom(Biostrings,alphabetFrequency)
 importFrom(Biostrings,consensusMatrix)
