--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(getENCODEdata)
 export(queryEncode)
 export(saveAlignments)
 export(searchTFBPS)
+export(shuffle)
 exportClasses(Enhancers)
 exportMethods(`$<-`)
 exportMethods(`$`)
@@ -36,8 +37,10 @@ importFrom(BiocFileCache,getBFCOption)
 importFrom(BiocGenerics,organism)
 importFrom(BiocGenerics,score)
 importFrom(BiocParallel,bplapply)
+importFrom(Biostrings,AAStringSet)
 importFrom(Biostrings,DNAMultipleAlignment)
 importFrom(Biostrings,DNAStringSet)
+importFrom(Biostrings,RNAStringSet)
 importFrom(Biostrings,alphabetFrequency)
 importFrom(Biostrings,consensusMatrix)
 importFrom(Biostrings,getSeq)
@@ -46,6 +49,7 @@ importFrom(Biostrings,mask)
 importFrom(Biostrings,matchPattern)
 importFrom(Biostrings,pairwiseAlignment)
 importFrom(Biostrings,pattern)
+importFrom(Biostrings,readDNAStringSet)
 importFrom(Biostrings,reverseComplement)
 importFrom(Biostrings,unaligned)
 importFrom(Biostrings,unmasked)
@@ -69,6 +73,7 @@ importFrom(httr,http_error)
 importFrom(httr,http_status)
 importFrom(httr,http_type)
 importFrom(jsonlite,fromJSON)
+importFrom(methods,is)
 importFrom(motifmatchr,matchMotifs)
 importFrom(motifmatchr,motifMatches)
 importFrom(rtracklayer,import)
