Import method subset from S4Vectors.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,4 +90,5 @@ importMethodsFrom(GenomeInfoDb,seqinfo)
 importMethodsFrom(IRanges,subsetByOverlaps)
 importMethodsFrom(Matrix,rowSums)
 importMethodsFrom(Matrix,t)
+importMethodsFrom(S4Vectors,subset)
 useDynLib(enhancerHomologSearch)
