--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,7 +47,6 @@ importFrom(Biostrings,getSeq)
 importFrom(Biostrings,injectHardMask)
 importFrom(Biostrings,mask)
 importFrom(Biostrings,matchPattern)
-importFrom(Biostrings,pairwiseAlignment)
 importFrom(Biostrings,pattern)
 importFrom(Biostrings,readDNAStringSet)
 importFrom(Biostrings,reverseComplement)
@@ -76,6 +75,7 @@ importFrom(jsonlite,fromJSON)
 importFrom(methods,is)
 importFrom(motifmatchr,matchMotifs)
 importFrom(motifmatchr,motifMatches)
+importFrom(pwalign,pairwiseAlignment)
 importFrom(rtracklayer,import)
 importFrom(stats,p.adjust)
 importFrom(utils,combn)
