--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: enhancerHomologSearch
 Type: Package
 Title: Identification of putative mammalian orthologs to given enhancer
-Version: 1.9.5
+Version: 1.9.6
 Authors@R: c(person(given="Jianhong", family="Ou", email="jianhong.ou@duke.edu", 
                  role=c("aut", "cre"), comment=c(ORCID="0000-0002-8652-2488")),
             person(given="Valentina", family="Cigliola", role=c("dtc")),
@@ -22,6 +22,7 @@ Imports: BiocGenerics, Biostrings, BSgenome, BiocParallel, BiocFileCache,
          jsonlite,
          motifmatchr,
          Matrix,
+         pwalign,
          rtracklayer, Rcpp,
          S4Vectors, stats,
          utils
